--- a/src/yaml/ancient.yml
+++ b/src/yaml/ancient.yml
@@ -23,10 +23,23 @@ subsets:
   nucleic acid sequence source:
   investigation:
 enums:
-  Strandedness:
+  ## EXAMPLE #############
+  example:
     permissible_values:
-      single:
-      double:
+      one:
+      two:
+  #######################
+  DamageTreatmentEnum:
+    permissable_values:
+      none:
+      partial-udg:
+      full-udg:
+      enriched:
+      other:
+  LibTypeEnum:
+    permissible_values:
+      amplicon:
+      shotgun:
 slots:
   ancient_data:
     description: Data that comply with Extension Ancient
@@ -37,19 +50,425 @@ slots:
     range: Ancient
     inlined: true
     inlined_as_list: true
-  strandedness:
+  ## TEMPLATE #########################
+  example:
+    annotations:
+      Expected_value: measurement value or measurement value range
+      Preferred_unit: meter
+    description: example entry
+    title: Example entry with all relevant LinkML slot entries
+    examples:
+      - value: example m
+    in_subset:
+      - sequencing
+    keywords:
+      - example
+    string_serialization: "{float}-{float} {unit}"
+    slot_uri: MIXS:999999999
+    multivalued: true
+    range: float ## or name of defined enum as above
+    pattern: ^([^\s-]{1,2}|[^\s-]+.+[^\s-]+) \[[a-zA-Z]{2,}:[a-zA-Z0-9]\d+\]$
+    structured_pattern:
+      syntax: ^{scientific_float}( *- *{scientific_float})? *{text}$
+      interpolated: true
+      partial_match: true
+    required: true
+    recommended: true
+  ###########################
+  collection_context_name:
+    annotations:
+      Expected_value: name of institution
+    description: Name of where sample originated and is typically stored. Typically will be 'owning institution'.
+    title: context name where location was collected
+    examples:
+      - value: Natural History London
+    in_subset:
+      - nucleic acid sequence source
+    keywords:
+      - storage
+    slot_uri: MIXS:999999901
+    multivalued: true
+    range: string
+    required: false
+    recommended: true
+  cultural_era:
+    annotations:
+      Expected_value: chronotology or PeriodO term; text
+    description: >-
+      The cultural era approximating the period in which the individual 
+      lived from https://chronontology.dainst.org/ or PeriodO. 
+      Specify when no value for 'sample_age' is present, or additionally 
+      to it.
+    title: cultural era or period
+    examples:
+      - value: "Copper Age [Chronotology: NW6hofAScJSE]"
+    in_subset:
+      - nucleic acid sequence source
+    keywords:
+      - ancient
+      - age
+    string_serialization: "{termLabel} [{termID}]|{text}"
+    slot_uri: MIXS:999999902
+    multivalued: false
+    required: false
+    recommended: true
+  damage_treatment:
     annotations:
       Expected_value: enumeration
-    description: Specify whether the constructed library is from single or double stranded DNA
-    title: strandedness of dna library
+    description: >-
+      Indication of whether characteristic ancient DNA damage has been 
+      enzymatically or chemically removed in a laboratory
+    title: Damage treatment type
     examples:
-      - value: single
-    keywords:
-      - method
+      - value: none
+      - value: partial-udg
+    in_subset:
       - sequencing
-    range: strandedness
-    slot_uri: MIXS:9999901
+    keywords:
+      - ancient
+    string_serialization: "{float}-{float} {unit}"
+    slot_uri: MIXS:999999903
+    multivalued: true
+    range: DamageTreatmentEnum ## or name of defined enum as above
     required: true
+  dna_extraction_date:
+    description: >-
+      The date when the nucleic acids was extracted from the sample 
+      material. In case no exact time is available, the date can be 
+      right truncated i.e. all of these are valid times: 
+      2008-01-23T19:23:10+00:00; 2008-01-23T19:23:10; 
+      2008-01-23; 2008-01; 2008; Except: 2008-01; 2008 all are ISO8601 compliant
+    title: date of extraction of nucleic acids from sample
+    examples:
+      - value: "2023-12-01"
+    in_subset:
+      - nucleic acid sequence source
+    slot_uri: MIXS:9999999904
+    range: datetime ## or name of defined enum as above
+    required: false
+    recommended: true
+  ethical_authority:
+    annotations:
+      Expected_value: name of authority providing ethical approval
+    description: >-
+      Name of the authority or institution that awarded sampling and 
+      analysis (e.g. human remains) and/or export permission 
+      (e.g. animal remains)
+    title: ethical authority
+    examples:
+      - value: "University of Copenhagen"
+      - value: "Federal Foreign Office (Germany)"
+    in_subset:
+      - investigation
+    keywords:
+      - ethics
+      - location
+    slot_uri: MIXS:999999905
+    multivalued: true
+    range: string
+    required: false
+    recommended: true
+  ethical_date:
+    description: >-
+      Date of award of ethical/export permission. The date can be right truncated 
+      i.e. all of these are valid times: 2008-01-23; 2008-01; 2008; 
+      Except: 2008-01; 2008 all are ISO8601 compliant
+    title: date of ethical approval date
+    examples:
+      - value: "2023-12-01"
+    in_subset:
+      - investigation
+    slot_uri: MIXS:9999999906
+    range: datetime
+    required: false
+    recommended: true
+  ethical_id:
+    description: >-
+      The permissions code(s) or ID(s) provided by the authority associated with 
+      approval of the analysis of this particular sample
+    title: ethical permit or approval ID
+    examples:
+      - value: "DE-123-JK"
+    in_subset:
+      - investigation
+    keywords:
+      - ethics
+    slot_uri: MIXS:999999906
+    multivalued: true
+    range: string
+    required: false
+    recommended: true
+  experimental_procedures:
+    description: >-
+      Provide a DOI or URL to refer to the paper where the nucleic acid extraction, 
+      library construction, and other procedures are explained in more details
+    title: experimental procedures
+    examples:
+      - value: doi:10.1093/nar/gkr771
+    in_subset:
+      - nucleic acid sequence source
+    slot_uri: MIXS:999999907
+    multivalued: true
+    range: string
+    pattern: ^^PMID:\d+$|^doi:10.\d{2,9}/.*$|^https?:\/\/(?:www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b(?:[-a-zA-Z0-9()@:%_\+.~#?&\/=]*)$$
+    structured_pattern:
+      syntax: ^{PMID}|{DOI}|{URL}$
+      interpolated: true
+      partial_match: true
+  lib_concentration:
+    annotations:
+      Expected_value: measurement value in number of copies per µl
+    description: >-
+      Concentration of library in copies per µl, as inferred by qPCR
+    title: library concentration
+    examples:
+      - value: 123000000
+    in_subset:
+      - sequencing
+    slot_uri: MIXS:999999908
+    string_serialization: "{float} {unit}"
+    multivalued: true
+  lib_index_polymerase:
+    annotations:
+      Expected_value: name of polymerase used during library indexing
+    description: >-
+      The of DNA polymerase enzyme used for indexing DNA libraries
+    title: library index polymerase
+    examples:
+      - value: "Agilent PfuTurbo Cx HotStart"
+    in_subset:
+      - sequencing
+    keywords:
+      - polymerase
+      - library
+      - preparation
+    string_serialization: "{text}"
+    slot_uri: MIXS:999999909
+    range: string
+    required: false
+    recommended: true
+  lib_preparation_protocols:
+    description: >-
+      Citation(s) for the DNA library preparation protocol
+    title: library preparation protocols
+    examples:
+      - value: doi:10.1093/nar/gkr771
+    in_subset:
+      - nucleic acid sequence source
+    slot_uri: MIXS:999999907
+    multivalued: true
+    range: string
+    pattern: ^^PMID:\d+$|^doi:10.\d{2,9}/.*$|^https?:\/\/(?:www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b(?:[-a-zA-Z0-9()@:%_\+.~#?&\/=]*)$$
+    structured_pattern:
+      syntax: ^{PMID}|{DOI}|{URL}$
+      interpolated: true
+      partial_match: true
+  lib_reamplification_polymerase:
+    annotations:
+      Expected_value: name of polymerase used during library indexing
+    description: >-
+      The name of polymerase enzyme used for reamplifying DNA libraries
+    title: library reamplification polymerase
+    examples:
+      - value: "KAPA HiFi HotStart Uracil+"
+    in_subset:
+      - sequencing
+    keywords:
+      - polymerase
+      - library
+      - preparation
+    string_serialization: "{text}"
+    slot_uri: MIXS:999999909
+    range: string
+    required: false
+    recommended: true
+  lib_type:
+    description: >-
+      The type of library created. Amplicon based or non-amplicon based. 
+      Amplicon based, is a library that result in rather short DNA fragments 
+      while non-amplicon-based refers to non targeted approach.
+    title: library type
+    examples:
+      - value: amplicon
+    in_subset:
+      - sequencing
+    keywords:
+      - library
+      - preparation
+    slot_uri: MIXS:999999910
+    range: LibTypeEnum
+    required: false
+  neg_cont_status:
+    description: >-
+      Specify whether the sample is a negative control or not.
+    title: negative control status
+    examples:
+      - value: true
+    keywords:
+      - control
+    in_subset:
+      - nucleic acid sequence source
+    slot_uri: MIXS:999999911
+    range: boolean
+  num_capture_reamp_cycles:
+    description: >-
+      Number of amplification cycles after capture enrichment
+    title: number of reamplification cycles after capture
+    examples:
+      - value: 12
+    in_subset:
+      - sequencing
+    slot_uri: MIXS:999999912
+    range: integer
+  num_reamp_cycles:
+    description: >-
+      Number of amplification cycles after library indexing PCR
+    title: number of reamplification cycles
+    examples:
+      - value: 12
+    in_subset:
+      - sequencing
+    slot_uri: MIXS:999999913
+    range: integer
+  preservational_treatment:
+    description: >-
+      Description of any treatment applied to samples for the purpose of 
+      maximising collection preservation that may influence downstream 
+      DNA recovery or library construction, such as storage fluid or 
+      reconstructive glue
+    title: preservational treatment
+    examples:
+      - value: "stored in formalin"
+    in_subset:
+      - nucleic acid sequence source
+    keyword:
+      - ancient
+    slot_uri: MIXS:999999914
+    multivalued: true
+    range: string
+    string_serialization: "{text}"
+  prev_pubs:
+    description: >-
+      Any publications that report data from the same body/skeleton/individual
+    title: previous publications
+    examples:
+      - value: doi:10.1016/j.jas.2015.02.0181
+    in_subset:
+      - nucleic acid sequence source
+    slot_uri: MIXS:999999915
+    multivalued: true
+    range: string
+    pattern: ^^PMID:\d+$|^doi:10.\d{2,9}/.*$|^https?:\/\/(?:www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b(?:[-a-zA-Z0-9()@:%_\+.~#?&\/=]*)$$
+    structured_pattern:
+      syntax: ^{PMID}|{DOI}|{URL}$
+      interpolated: true
+      partial_match: true
+  recovery_date:
+    annotations:
+      Preferred_unit: year
+    description: >-
+      Date of excavation or retrieval from burial or depositional context, 
+      if known
+    title: date of retrieval from depositional context
+    examples:
+      - value: "2023"
+    in_subset:
+      - nucleic acid sequence source
+    slot_uri: MIXS:9999999916
+    range: datetime
+    required: false
+    recommended: true
+  samp_decontam_pretreat:
+    description: >-
+      Method(s) employed for surface decontamination of samples of external 
+      modern DNA; Treatment used on the samples. Depends on the sample type. 
+      More relevant for bones than environmental samples. E.g. buffers, EDTA, etc.
+    title: sample decontamination pretreatment
+    examples:
+      - value: doi:10.1016/j.jas.2015.02.0181
+    in_subset:
+      - nucleic acid sequence source
+    slot_uri: MIXS:999999917
+    multivalued: true
+    range: string
+    pattern: ^^PMID:\d+$|^doi:10.\d{2,9}/.*$|^https?:\/\/(?:www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b(?:[-a-zA-Z0-9()@:%_\+.~#?&\/=]*)$$
+    structured_pattern:
+      syntax: ^{PMID}|{DOI}|{URL}$
+      interpolated: true
+      partial_match: true
+  sample_age:
+    annotations:
+      Preferred_unit: in years before present (BP) or (BCE/CE)
+    description: >-
+      The approximate date that individual was living and then died, or the 
+      sample was exposed to the  surface. Typically inferred from archaeological 
+      material, or biological material associated with a sediment, with 
+      radiocarbon dating and other chronometric methods. Should be midpoint of 
+      calibrated radiocarbon age.
+    title: sample age
+    examples:
+      - value: "100000 BP"
+      - value: "1700 AD"
+    in_subset:
+      - nucleic acid sequence source
+    slot_uri: MIXS:9999999918
+    string_serialization: "{integer} {unit}"
+    required: false
+    recommended: true
+  sample_age_inference_methods:
+    description: >-
+      The method used to infer the sample age. Method (14C, OLS, etc.) 
+      and associated information (lab code, etc).
+    title: sample age inference methods
+    examples:
+      - value: "radiocarbon dating, calibrated with OxCal v4.3"
+    in_subset:
+      - investigation
+    slot_uri: MIXS:999999919
+    multivalued: true
+    range: string
+    string_serialization: "{text}"
+    required: false
+    recommended: true
+  sample_alt_lab_ids:
+    description: >-
+      Any alternate sample IDs used in by the research group publishing the 
+      paper or other groups. If known.
+    title: alternative sample IDs
+    examples:
+      - value: "ABC_24"
+    in_subset:
+      - investigation
+    slot_uri: MIXS:999999920
+    multivalued: true
+    range: string
+    string_serialization: "{text}"
+  site_type:
+    description: >-
+      The type of site the sediment cores where taken. E.g. ocean, marine, 
+      freshwater, brackish, ice caves, caves.
+    title: site type
+    examples:
+      - value: "burial"
+    in_subset:
+      - nucleic acid sequence source
+    slot_uri: MIXS:999999921
+    range: string
+    string_serialization: "{text}"
+  storage_conditions:
+    description: >-
+      General conditions in which the sample was stored in long-term collection
+      storage, that may influenced DNA recovery or library construction. For 
+      example, specify temperature, humidity, presence of microbial overgrowth 
+      etc..
+    title: storage conditions
+    examples:
+      - value: "climate-controlled"
+    in_subset:
+      - nucleic acid sequence source
+    slot_uri: MIXS:999999922
+    range: string
+    string_serialization: "{text}"
 classes:
   Ancient:
     description: >-
@@ -61,7 +480,6 @@ classes:
     title: ancient
     is_a: Extension
     slots:
-      - strandedness
       - collection_context_name
       - cultural_era
       - damage_treatment
@@ -88,9 +506,7 @@ classes:
       - site_type
       - storage_conditions
     slot_usage:
-      strandedness:
-        required: true
-      cultural_era:
+      sample_age:
         recommended: true
     class_uri: MIXS:9999903
     annotations:
