--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -402,8 +402,7 @@ slots:
     recommended: true
   sample_alt_lab_ids:
     description: >-
-      Any alternate sample IDs used in by the research group publishing the 
-      paper or other groups. If known.
+      Any alternative sample or material IDs related to the sample not already covered by terms samp_name and source_mat_id, including from associated other non-genetic analyses of the same sample.
     title: alternative sample IDs
     examples:
       - value: "ABC_24"
