--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -64,13 +64,14 @@ slots:
     annotations:
       Expected_value: chronotology or PeriodO term; text
     description: >-
-      The cultural era approximating the period in which the individual 
-      lived from https://chronontology.dainst.org/ or PeriodO. 
-      Specify when no value for 'sample_age' is present, or additionally 
-      to it.
+      The cultural era approximating the period in which the individual lived from https://chronontology.dainst.org/ or PeriodO if possible.
+      Specify when no value for 'sample_age' is present, or additionally to it.
+      If not available, follow INSDC standard for reporting missing data (https://www.insdc.org/submitting-standards/missing-value-reporting/).
     title: cultural era or period
     examples:
       - value: "Copper Age [Chronotology: NW6hofAScJSE]"
+      - value: "Upper Middle Palaeolthic"
+      - value: "Not collected"
     in_subset:
       - nucleic acid sequence source
     keywords:
@@ -79,7 +80,7 @@ slots:
     string_serialization: "{termLabel} [{termID}]|{text}"
     slot_uri: MIXS:999999902
     multivalued: false
-    required: false
+    required: true
     recommended: true
   damage_treatment:
     annotations:
@@ -102,11 +103,8 @@ slots:
     required: true
   dna_extraction_date:
     description: >-
-      The date when the nucleic acids was extracted from the sample 
-      material. In case no exact time is available, the date can be 
-      right truncated i.e. all of these are valid times: 
-      2008-01-23T19:23:10+00:00; 2008-01-23T19:23:10; 
-      2008-01-23; 2008-01; 2008; Except: 2008-01; 2008 all are ISO8601 compliant
+      The date when the nucleic acid extraction was started from the sample material.
+      In case no exact time is available, the date can be right truncated i.e. all of these are valid times: 2008-01-23T19:23:10+00:00; 2008-01-23T19:23:10; 2008-01-23; 2008-01; 2008; Except: 2008-01; 2008 all are ISO8601 compliant
     title: date of extraction of nucleic acids from sample
     examples:
       - value: "2023-12-01"
@@ -187,16 +185,17 @@ slots:
       partial_match: true
   lib_concentration:
     annotations:
-      Expected_value: measurement value in number of copies per µl
+      Expected_value: measurement value in number of ng per µl
     description: >-
-      Concentration of library in copies per µl, as inferred by qPCR
+      Concentration of library in ng per µl, as inferred by qPCR/Qubit/etc.
     title: library concentration
     examples:
-      - value: 123000000
+      - value: 2
+      - value: 0.5
     in_subset:
       - sequencing
     slot_uri: MIXS:999999908
-    string_serialization: "{float} {unit}"
+    string_serialization: "{float}"
     multivalued: true
   lib_index_polymerase:
     annotations:
@@ -237,7 +236,7 @@ slots:
     annotations:
       Expected_value: name of polymerase used during library indexing
     description: >-
-      The name of polymerase enzyme used for reamplifying DNA libraries
+      The name of polymerase enzyme used for reamplifying DNA libraries post-indexing.
     title: library reamplification polymerase
     examples:
       - value: "KAPA HiFi HotStart Uracil+"
@@ -254,9 +253,8 @@ slots:
     recommended: true
   lib_type:
     description: >-
-      The type of library created. Amplicon based or non-amplicon based. 
-      Amplicon based, is a library that result in rather short DNA fragments 
-      while non-amplicon-based refers to non targeted approach.
+      The type of library created, i.e., amplicon based or shotgun. 
+      Amplicon based, is a library targets a specific region or regions of a genome (e.g. microbial genome capture based on baits of a reference genome), while shotgun refers to non targeted approach.
     title: library type
     examples:
       - value: amplicon
@@ -337,8 +335,9 @@ slots:
     annotations:
       Preferred_unit: year
     description: >-
-      Date of excavation or retrieval from burial or depositional context, 
-      if known
+      Date of excavation or retrieval from burial or depositional context, if known.
+      In case no exact time is available, the date can be right truncated i.e. all of these are valid times: 2008-01-23T19:23:10+00:00; 2008-01-23T19:23:10; 2008-01-23; 2008-01; 2008; Except: 2008-01; 2008 all are ISO8601 compliant.
+      If excavations were done during a longer period, report its midpoint.
     title: date of retrieval from depositional context
     examples:
       - value: "2023"
