--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -517,7 +517,7 @@ slots:
     annotations:
       Expected_value: Description of the preservation of the sampled (ancient) organism/host
     description: >-
-      Description of the state of the sampled organism/host as originally preserved in the burial environment, e.g. if the the sample was artificilally or naturally (fully/partially) mummified at the time of death.
+      Description of the state of the sampled (ancient) organism/host as originally preserved in the burial environment, e.g. if the the sample was artificially or naturally (fully/partially) mummified at the time of death.
     title: ancient body preservation state
     examples:
       - value: "complete artificial mummification."
