--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -291,7 +291,7 @@ slots:
     multivalued: true
   num_reamp_cycles:
     description: >-
-      Number of amplification cycles after library indexing PCR. This refers to amplifications prior capture experiments.
+      Number of amplification cycles after library indexing PCR. If capture data, this refers to amplifications prior to the capture experiments.
     title: number of reamplification cycles
     examples:
       - value: 12
@@ -338,7 +338,7 @@ slots:
     description: >-
       Date of excavation or retrieval from burial or depositional context, if known.
       In case no exact time is available, the date can be right truncated i.e. all of these are valid times: 2008-01-23T19:23:10+00:00; 2008-01-23T19:23:10; 2008-01-23; 2008-01; 2008; Except: 2008-01; 2008 all are ISO8601 compliant.
-      If excavations were done during a longer period, report its midpoint.
+      If excavations were done during a longer period, report its midpoint at a month or year level.
     title: date of retrieval from depositional context
     examples:
       - value: "2023"
@@ -371,7 +371,7 @@ slots:
       Expected_value: value or range starting from from BP (1950)
       Preferred_unit: in years before present (BP) or (BCE/CE)
     description: >-
-      The approximate date or date range that individual was living and then died, or the 
+      The approximate date or date range that individual or organism was living and then died, or the 
       sample was exposed to the  surface. Typically inferred from archaeological 
       material, or biological material associated with a sediment, with 
       radiocarbon dating and other chronometric methods. Should be midpoint of 
