--- a/.github/workflows/latest-tag.yml
+++ b/.github/workflows/latest-tag.yml
@@ -13,4 +13,6 @@ jobs:
     steps:
       - name: Latest tag
         uses: EndBug/latest-tag@v1.6.2
+        with:
+          git-directory: '/home/runner/work/extension-ancient/'
             
