--- a/.github/workflows/latest-tag.yml
+++ b/.github/workflows/latest-tag.yml
@@ -11,8 +11,7 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Check out pipeline code
+        uses: actions/checkout@4
       - name: Latest tag
         uses: EndBug/latest-tag@v1.6.2
-        with:
-          git-directory: '/home/runner/work/extension-ancient/'
-            
