--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -407,8 +407,10 @@ slots:
     annotations:
       Expected_value: age value corresponding to unit
     description: >-
-      The youngest possible age of the sample. Youngest refers to the time closest to present day.
+      The youngest possible age of the sample.
+      Youngest refers to the time closest to present day.
       If a sample has only a single age value, the value from samp_age_range_oldest_limit can be repeated.
+      Sample age refers to a period of time in the past, such as when an organism was living and then died, not the biological age.
     title: sample age range youngest limit
     examples:
       - value: "100000"
@@ -438,8 +440,10 @@ slots:
     annotations:
       Expected_value: age value corresponding to unit
     description: >-
-      The oldest possible age of the sample. Oldest refers to the time furthest from present day.
+      The oldest possible age of the sample.
+      Oldest refers to the time furthest from present day.
       If a sample has only a single age value, the value from samp_age_range_youngest_limit can be repeated.
+      Sample age refers to a period of time in the past, such as when an organism was living and then died, not the biological age.
     title: sample age range oldest limit
     examples:
       - value: "120000"
