--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -70,6 +70,7 @@ enums:
       electron spin resonance:
       uranium thorium:
       stratigraphic inference:
+      relative dating:
       historical records:
       other:
 slots:
