--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -86,8 +86,8 @@ slots:
   collection_context_name:
     annotations:
       Expected_value: name of institution
-    description: Name of where sample originated and is typically stored. Typically will be 'owning institution'.
-    title: context name where location was collected
+    description: Name of where sample originated and is typically stored or archived. Typically will be 'owning institution'.
+    title: location where sample typically is archived
     examples:
       - value: Natural History Museum London
     in_subset:
